# FirstProjectOOP

./: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  Belladonna.cpp  Belladonna.h  CMakeLists.txt  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Human.cpp  Human.h  Logs.cpp  Logs.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Point.cpp  Point.h  Sheep.cpp  Sheep.h  Sosnowsky.cpp  Sosnowsky.h  SowThistle.cpp  SowThistle.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h  World.cpp  World.h  main.cpp
