cmake_minimum_required(VERSION 3.25)
project(FirstProject)

set(CMAKE_CXX_STANDARD 17)

add_executable(FirstProject main.cpp World.cpp World.h Organism.cpp Organism.h Human.cpp Human.h Animal.cpp Animal.h Point.cpp Point.h Wolf.cpp Wolf.h Sheep.cpp Sheep.h Fox.cpp Fox.h Turtle.cpp Turtle.h Antelope.cpp Antelope.h Plant.h Plant.cpp Belladonna.cpp Belladonna.h SowThistle.h SowThistle.cpp Guarana.h Guarana.cpp Sosnowsky.cpp Sosnowsky.h Grass.cpp)
